/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package br.ufjf.dcc.rotacompartilhada.model;

/**
 *
 * @author 55329
 */
public class Passageiro extends Pessoa{
    
    public Passageiro(String nome, String cpf, Endereco endereco){
        super(nome, cpf, endereco);
    }
    
    
}
